@@ -6,6 +6,8 @@ new:
 - Commit menu_category_recsdone.diff by tomas & louis @vdr-portal.de
   http://www.vdr-portal.de/board1-news/board2-vdr-news/p1271995-skindesigner-1-0-0-neuer-default-skin-estuary4vdr/#post1271995
 - Drop legacy code prior VDR 2.2.0
+- Commit epgsearch-inactive-records-v1.diff by lhanisch@vdr-developer.org
+  https://projects.vdr-developer.org/issues/1913
 
 2017-05-01; Version 2.2.0 - stable version
 new:
